<resources>
    <string name="app_name">Degré Apéro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">refresh</string>
    <string name="litre_vin">Litre Vin :</string>
    <string name="degres_vin">Degrès Vin :</string>
    <string name="degres_eau_de_vie">Degrès Eau de Vie :</string>
    <string name="degres_apero">Degrès Apero :</string>
    <string name="litre_eau_de_vie">Litre Eau de Vie :</string>
    <string name="calcul">Calcul</string>
    <string name="langmehdi"><a href="https://twitter.com/langmehdi" >©langmehdi</a></string>
    <string name="recettePruneau">voici la recette aux pruneaux :</string>
    <string name="recettePruneauBis">   - 5kg de pruneaux \n - 300 gr de sucre \n - Vin (melon ou rouge) \n - Eau de vie</string>
    <string name="recette">Recette aux pruneaux</string>
    <string name="legal">Licence</string>
</resources>
